# crypto-streaming-order-book

./: Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
src/: binance.rs  bitstamp.rs  client.rs  exchange.rs  main.rs  order_book.rs  proto.rs  server.rs  service.rs  test_data.rs  test_server.rs
