[package]
name = "crypto-streaming-order-book"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures-util = "0.3.28"
serde = { version = "1.0.95", features = ["derive"] }
serde_json = "1.0.95"
tonic = "0.9.1"
prost = "0.11.9"
tokio-stream = "0.1.12"
anyhow = "1.0.70"

[build-dependencies]
tonic-build = "0.9.1"