[package]
name = "crypto-streaming-order-book"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures-util = "0.3.28"
serde = { version = "1.0.95", features = ["derive"] }
serde_json = "1.0.95"
tonic = "0.9.1"
prost = "0.11.9"
tokio-util = "0.7.8"
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.1"